# verifyTrusty

./: .gitignore  CMakeLists.txt  README.md  default.xml  verify-trusty.sh  verify.py.in
.github/workflows/: blacklist.ptr.cex.txt  blacklist.ptr.vac.txt  blacklist.vac.txt  main.yml
docker/: seahorn-dev10-verify-trusty.Dockerfile  seahorn-dev14-verify-trusty.Dockerfile
scripts/: get_exper_brunch_stat.py  get_exper_res.py
seahorn/: CMakeLists.txt  sea.yaml  sea_base.yaml  sea_cex_base.yaml  sea_crab_base.yaml
seahorn/gatekeeper/: CMakeLists.txt
seahorn/gatekeeper/jobs/: CMakeLists.txt
seahorn/gatekeeper/jobs/ipc/: CMakeLists.txt  harness.cpp
seahorn/gatekeeper/stubs/: CMakeLists.txt
seahorn/include/: nondet.h
seahorn/jobs/gatekeeper_ipc/: CMakeLists.txt  gatekeeper_ipc_harness.cpp
seahorn/jobs/storage_ipc_channel_nodes/: main.c  old_ipc_instrument.c
seahorn/jobs/storage_ipc_indirect_handlers/: CMakeLists.txt  main.c
seahorn/jobs/storage_ipc_msg_buffer/: CMakeLists.txt  main.c  sea.yaml
seahorn/jobs/storage_ipc_port_create_destroy/: CMakeLists.txt  main.c  sea.yaml
seahorn/jobs/storage_ipc_port_create_destroy-xiang/: sea.yaml
seahorn/lib/: CMakeLists.txt  sea_ipc_helper.c
seahorn/sea_libc/: CMakeLists.txt  README
seahorn/sea_libc/include/: assert.h
seahorn/sea_libc/src/: realloc.c  sea_allocators.c
seahorn/storage/: CMakeLists.txt
seahorn/storage/include/: sea_ipc_helper.h
seahorn/storage/ipc/jobs/: CMakeLists.txt  storage_ipc_channel_nodes.c  storage_ipc_indirect_handlers.c  storage_ipc_msg_buffer.c  storage_ipc_port_create_destroy.c
seahorn/storage/ipc/stubs/: CMakeLists.txt
seahorn/storage/jobs/ipc/indirect_handlers/: CMakeLists.txt  indirect_handlers_harness.c
seahorn/storage/jobs/ipc/ipc_session/: CMakeLists.txt  ipc_session_harness.c
seahorn/storage/jobs/ipc/ipc_unit/: CMakeLists.txt  README.md  ipc_unit_harness.c  stubs.c
seahorn/storage/jobs/ipc/msg_buffer/: CMakeLists.txt  msg_buffer_harness.c
seahorn/storage/jobs/ipc/port_create_destroy/: CMakeLists.txt  port_create_destroy_harness.c
seahorn/storage/lib/: CMakeLists.txt  sea_ipc_helper.c
seahorn/storage/stubs/: CMakeLists.txt  ipc_loop_override.c  seamock.hh  syscalls.c  syscalls_mock.cc
seahorn/stubs/: CMakeLists.txt  fprintf_override.c  ipc_loop_override.c  time_override.c  trusty_handle_api_override.c  trusty_messaging_api_override.c  trusty_msg.cpp  trusty_server_api_override.c
seahorn/trusty/: CMakeLists.txt
seahorn/trusty/user/base/lib/: CMakeLists.txt
seahorn/trusty/user/base/lib/libc-trusty/: CMakeLists.txt  crab_handle_table.c  crab_handle_table.h  crab_trusty_syscalls_impl.c  sea_handle_table.c  sea_handle_table.h  trusty_syscalls.h  trusty_syscalls_impl.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/: CMakeLists.txt  sea_handle_table.c  sea_handle_table.h  trusty_syscalls.h  trusty_syscalls_impl.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_accept/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_close/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_connect/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_create/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_get_msg/: main.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_put_msg/: CMakeLists.txt  main.c  sea.yaml
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_read_msg/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_send_msg/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_set_cookie/: main.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_wait/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty-ptr/proof/port_wait_any/: main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/: CMakeLists.txt
seahorn/trusty/user/base/lib/libc-trusty/proof/port_accept/: main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_close/: main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_connect/: main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_create/: main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_get_msg/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_put_msg/: CMakeLists.txt  main.c  sea.yaml
seahorn/trusty/user/base/lib/libc-trusty/proof/port_read_msg/: main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_send_msg/: main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_set_cookie/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_wait/: main.c
seahorn/trusty/user/base/lib/libc-trusty/proof/port_wait_any/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/tipc/: CMakeLists.txt  trusty_ipc_impl.c
seahorn/trusty/user/base/lib/tipc/include/: sea_tipc_helper.h
seahorn/trusty/user/base/lib/tipc/proof/: CMakeLists.txt
seahorn/trusty/user/base/lib/tipc/proof/tipc_connect/: CMakeLists.txt  main.c
seahorn/trusty/user/base/lib/tipc/proof/tipc_send1/: CMakeLists.txt  main.c
seahorn/trusty_common/: CMakeLists.txt
seahorn/trusty_common/include/: config.h.in  nondet.h
seahorn/trusty_common/lib/: CMakeLists.txt  bcmp.c  nd_clam.c  nondet.c
seahorn/trusty_common/stubs/: CMakeLists.txt  new_delete_override.cpp  realloc_override.c  time_override.c  trusty_handle_api_override.c
trusty_mod/trusty/user/app/storage/: ipc.c  ipc_mod.h
trusty_mod/trusty/user/base/include/user/: trusty_app_manifest.h  trusty_err.h  trusty_ipc.h  trusty_log.h  trusty_uio.h  trusty_unittest.h
