add_subdirectory(port_create)
add_subdirectory(port_close)
add_subdirectory(port_connect)
add_subdirectory(port_accept)
add_subdirectory(port_get_msg)
add_subdirectory(port_put_msg)
add_subdirectory(port_read_msg)
add_subdirectory(port_send_msg)
add_subdirectory(port_wait)
add_subdirectory(port_wait_any)
add_subdirectory(port_set_cookie)